# hive

./: .dockerignore  .env  .envrc  .gitignore  .repomixignore  .rust-analyzer  .rust-analyzer.json  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  fly.toml  hive.nix  leptosfmt.toml  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
apiary/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apiary/src-tauri/.cargo/: config.toml
apiary/src-tauri/capabilities/: default.json
apiary/src-tauri/icons/: icon.icns
apiary/src-tauri/src/: lib.rs  main.rs
apis/: .rust-analyzer  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  tailwind.config.js
apis/assets/: site.webmanifest
apis/assets/js/: cache.json  pwa.js  sw.js
apis/end2end/: SETUP.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
apis/end2end/tests/: example.spec.ts  multi-user-realtime.spec.ts
apis/locales/ca/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/cs/: faq.json  home.json  tournaments.json
apis/locales/de/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/en/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/es/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/fr/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/hu/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/it/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/ja/: faq.json  home.json  tournaments.json
apis/locales/nl/: donate.json  faq.json  home.json  tournaments.json
apis/locales/pt/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/ro/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/ru/: archive.json  donate.json  faq.json  game.json  header.json  home.json  messages.json  notifications.json  profile.json  resources.json  tournaments.json  user_config.json
apis/locales/sv/: faq.json  home.json  tournaments.json
apis/src/: app.rs  client.rs  email.rs  lib.rs  main.rs  notifications.rs  pwa.rs  pwa_cache.rs
apis/src/api/: auth.rs  mod.rs
apis/src/chat/: access.rs  channel_key.rs  mod.rs  simple_destination.rs
apis/src/common/: challenge_action.rs  challenge_error.rs  challenge_viewer.rs  client_message.rs  config_options.rs  game_action.rs  game_display.rs  game_reaction.rs  hex.rs  hex_stack.rs  markdown.rs  mod.rs  move_confirm.rs  move_info.rs  overlay_paint.rs  params.rs  piece_paint.rs  piece_type.rs  rating_change_info.rs  regexp_wrapper.rs  schedule_action.rs  server_message.rs  server_result.rs  svg_pos.rs  time_control.rs  time_signals.rs  tournament_action.rs  ui_utils.rs  user_action.rs
apis/src/email/: send.rs  (+4 more)
apis/style/: main.scss  tailwind.css
app/: Cargo.toml
app/src/: error_template.rs  lib.rs
culex/src-tauri/: Cargo.toml  tauri.conf.json
db/: .env  Cargo.toml  diesel.toml
db/src/: backfill_hashes.rs  config.rs  db_error.rs  error.rs  lib.rs  main.rs  schema.patch  schema.rs
db/tests/: active_realtime_clocks.rs  chat.rs  game_hashes.rs  notification_preferences.rs  push_device.rs  rating_concurrency.rs  soft_delete.rs
engine/: Cargo.toml  profile.json
engine/src/: board.rs  bug.rs  bug_stack.rs  color.rs  dfs_info.rs  direction.rs  game_control.rs  game_error.rs  game_result.rs  game_status.rs  game_type.rs  gated_directions.rs  hasher.rs  history.rs  hop.rs  last_turn.rs  lib.rs  main.rs  mid_move_board.rs  piece.rs  player.rs  position.rs  random_ai.rs  state.rs  svg_position.rs  tests.rs  torus_array.rs  turn.rs
hive-hydra/: Cargo.toml  README.md  hive-hydra.prod.yaml  hive-hydra.yaml
hive-hydra/src/: ai.rs  bot.rs  cli.rs  config.rs  hivegame_bot_api.rs  logging.rs  main.rs  turn_tracker.rs
scripts/: Cargo.toml  README.md  deploy.sh  generate-vapid-key.sh  rollback.sh  samply-top-functions.sh
scripts/nginx/: hive.conf.snippet
scripts/src/: common.rs  game_stats.rs  games_report.rs  main.rs  mod.rs  seed.rs  tests.rs  users.rs
scripts/sudoers/: hive-deploy
scripts/systemd/: blue.env  common.env  green.env  hive@.service
server/: Cargo.toml
server/src/: lobby.rs  main.rs  start_connection.rs  ws.rs
shared_types/: Cargo.toml
shared_types/src/: certainty.rs  challenge.rs  challenge_action.rs  challenge_error.rs  challenge_response.rs  chat_capabilities.rs  chat_message.rs  client_message.rs  conclusion.rs  game_response.rs  game_speed.rs  game_start.rs  game_type_filter.rs  games_query_options.rs  heartbeat_response.rs  lib.rs  messages_hub.rs  newtypes.rs  notification_category.rs  notification_channel.rs  opening_explorer.rs  pretty_string.rs  rating_response.rs  ready_user.rs  reserved_username.rs  schedule_action.rs  schedule_response.rs  scoring_mode.rs  seeding_mode.rs  server_result.rs  simple_user.rs  site_statistics_time_period.rs  standings.rs  start_mode.rs  takeback_conf.rs  telemetry.rs  tiebreaker.rs  time_info.rs  time_mode.rs  tournament_abstract_response.rs  (+7 more)
(+1096 files in other folders)
