[workspace]
members = ["apis", "engine", "db", "shared_types", "hive-hydra"]
resolver = "2"

[workspace.lints.clippy]
all = "warn"

# need to be applied only to wasm build
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[workspace.dependencies]
actix-files = { version = "0.6" }
actix-identity = { version = "0.9" }
actix-rt = "2.10.0"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-web = { version = "4", features = ["macros"] }
actix-ws = "0.4"
anyhow = "1"
argon2 = "0.5"
base64 = "0.22"
bb8 = { version = "0.9" }
bimap = { version = "0.6.3", features = ["serde"] }
bytes = "1"
cfg-if = "1.0.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
codee = { version = "0.3", features = ["msgpack_serde", "base64"] }
console_error_panic_hook = "0.1.7"
cookie = "0.18"
dashmap = "6"
diesel = { version = "2.3", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
    "64-column-tables",
] }
diesel-async = { version = "0.7", features = ["postgres", "bb8"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
dotenvy = "0.15"
futures-util = "0.3"
gloo-timers = { version = "0.4", features = ["futures"] }
icondata_core = "0.1"
icondata_tb = "0.1"
icondata_bi = "0.1"
icondata_ai = "0.1"
icondata_fa = "0.1"
icondata_io = "0.1"
icondata_bs = "0.1"
icondata_ch = "0.1"
icondata_lu = "0.1"
icondata_ri = "0.1"
icondata_ti = "0.1"
icondata_mdi = "0.1"
indoc = "2"
itertools = "0.15"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5"
leptos = { version = "0.8.20", features = ["nightly"] }
leptos-use = { version = "0.19" }
leptos_actix = { version = "0.8.7" }
leptos-chartistry = { version = "0.2" }
leptos_i18n = { version = "0.6.2", features = ["plurals"] }
leptos_i18n_build = "0.6.2"
leptos_icons = { version = "0.7" }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.14", features = ["nightly"] }
lettermint-rs = { version = "0.3.1", features = ["reqwest"] }
log = "0.4.27"
markdown = "1.0.0"
nanoid = "0.5"
rand = "0.10.2"
regex = "1.11"
reactive_stores = { version = "0.4.3" }
reqwest = { version = "0.13.1", features = ["json"] }
resvg = { version = "0.47", default-features = false }
rustls = { version = "0.23" }
# hyper-client instead of the default isahc backend — isahc drags in curl,
# which is one more native dep for the nix shell to satisfy.
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
web-time = "1.1"
url = "2"
serde = { version = "1" }
serde_json = { version = "1" }
serde_with = { version = "3.14" }
server_fn = { version = "0.8.13", features = ["cbor"] }
sha2 = "0.11"
simple_logger = "5.0"
skillratings = "0.29"
thiserror = "2.0.18"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tree-ds = { version = "0.2.0", features = ["serde", "compact_serde", "async"] }
uuid = { version = "1.17", features = ["v4", "js", "serde"] }
walkdir = "2.5"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
    "AbortController",
    "AbortSignal",
    "AudioContext",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "BinaryType",
    "Blob",
    "Clipboard",
    "CloseEvent",
    "Event",
    "HtmlDocument",
    "MessageEvent",
    "Navigator",
    "Notification",
    "NotificationOptions",
    "NotificationPermission",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "Storage",
    "SvgPoint",
    "SvgsvgElement",
    "SvgGraphicsElement",
    "SvgRect",
    "SvgMatrix",
    "Url",
    "WebSocket",
    "Window",
] }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
