[package]
name = "hive"
version = "0.1.0"
edition = "2021"

[lib]
name = "hive_lib"
path = "src/lib.rs"

[[bin]]
name = "hive_bin"
path = "src/main.rs" # replace bin.rs with name of your file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_with = "3.9.0"
thiserror = "*"
bitfield-struct = "0.8"
itertools = "0.13"
clap = { version = "4.5.30", features = ["derive"] }
