[package]
name = "hive"
version = "0.1.0"
edition = "2021"

[lib]
name = "hive_lib"
path = "src/lib.rs"

[[bin]]
name = "hive_bin"
path = "src/main.rs" # replace bin.rs with name of your file

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_with = "3.14.0"
thiserror = "*"
bitfield-struct = "0.11"
itertools = "0.14"
clap = { version = "4.5.41", features = ["derive"] }
anyhow.workspace = true
pest = "2.8.1"
pest_derive = "2.8.1"
resvg = "0.45"
usvg = "0.45"
