[package]
name = "hive"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
name = "hive_lib"
path = "src/lib.rs"

[[bin]]
name = "hive_bin"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:anyhow", "dep:clap", "dep:resvg"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }
thiserror = { workspace = true }
bitfield-struct = "0.12.1"
itertools = { workspace = true }
clap = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
pest = "2.8.1"
pest_derive = "2.8.1"
resvg = { workspace = true, optional = true }
