[package]
name = "hive-hydra"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"], default-features = false }
thiserror = { workspace = true }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.20"
