[package]
name = "hive-hydra"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13.1", features = ["rustls", "json"], default-features = false }
thiserror = { workspace = true }
async-trait = "0.1"
clap = { workspace = true }
config = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time", "env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3.20"
