[package]
name = "script"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
shared_types = { path = "../shared_types" }
hive = { path = "../engine" }
diesel = { workspace = true }
diesel-async = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
nanoid = { workspace = true }
rand = "0.9"
dotenvy = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
tempfile = "3.8"
log = "0.4"
env_logger = "0.10"
