[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_actix.workspace = true

actix-web.workspace = true
actix-web-actors.workspace = true
actix-files.workspace = true
actix.workspace = true
actix-rt.workspace = true
simple_logger.workspace = true
tokio.workspace = true
log.workspace = true
uuid.workspace = true
serde = { workspace = true, features = ["derive"] }
