[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
chrono = { workspace = true }
hive = { path = "../engine" }
anyhow = { workspace = true }
itertools = { workspace = true }
